--- a/game.html
+++ b/game.html
@@ -10,7 +10,6 @@
   </head>
   <body>
     <h1>Connect Four</h1>
-    <h2 id='result'></h2>
     <div id='gameboard'>
 
       <div class='gamecell' data-row='1' data-column='1' data-filled='false'></div>
@@ -76,7 +75,7 @@
     </div>
 
     <div id='controls'>
-      <h2>Current Player:</h2>
+      <h2 id='playertitle'>Current Player:</h2>
       <div id='currentcolor'></div>
       <button id='restart'>New Game</button>
     </div>
